# Rataplay

./: .gitignore  Cargo.toml  README.md
assets/: palabras.txt
src/: main.rs  menu.rs  reaction.rs
src/games/: mod.rs  number_memory.rs  reaction.rs  trait.rs  utils.rs  verbal_memory.rs
