[package]
name = "rataplay"
description = "A collection of minigames using Ratatui"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Thompson6626/Rataplay"
readme = "README.md"
keywords = ["cli", "games", "terminal", "tui", "ratatui"]
license = "MIT"

[dependencies]
ratatui = { version = "0.29.0", features = ["all-widgets"] }
crossterm = "0.29.0"
rand = "0.9.1"
